# third_party_buildfiles

./: BUILD.bazel  README.md  WORKSPACE.bazel  cef.bzl  deps.bzl  gen_github_actions.go  libpng.BUILD  spdlog.BUILD  zlib.BUILD
.github/workflows/: main.yml
buildfiles/: TGUI.BUILD  boost_ext_ut.BUILD  cef-project.BUILD  cef_prebuilt.BUILD  cef_prebuilt_macos_x64.BUILD  cef_prebuilt_win_x64.BUILD  cppcoro.BUILD  dear_imgui.BUILD  enet.BUILD  enet_plus.BUILD  freetype.BUILD  guisan.BUILD  gwork.BUILD  iconv.BUILD  librg.BUILD  lua.BUILD  nanogui_sdl.BUILD  ponder.BUILD  sdl2-cef.BUILD  sdl2.BUILD  sdl2_gui.BUILD  sdl2_image.BUILD  sdl2_mixer.BUILD  sdl2_ttf.BUILD  sdl2pp.BUILD  tomlpp.BUILD  zpl.BUILD
patches/: BUILD.bazel  cef_project_macos_support.patch  freetype_release_build.patch  gwork_sdl2_highdpi.patch  imgui_example_sdl_metal_include.patch  sdl-cef_base.patch  sdl-cef_hidpi.patch  sdl2_macosx_config.patch  sdl2pp_rawdefines.patch  tgui_config.patch
